# api/v1/openapi.yaml
@@ -71,18 +71,13 @@ components:
     CreateOrderItem:
       type: object
       required:
-        - productId
-        - quantity
+        - products
         - timestamp
       properties:
-        productId: 
-          type: string
-          description: Id of a product
-          example: "3a550dd9-c7d4-4c77-a73a-fcd13ce76712"
-        quantity: 
-          type: integer
-          description: Quantity of a product
-          example: 1
+        products:
+          type: array
+          items:
+            $ref: "#/components/schemas/ProductItem"
         timestamp: 
           type: string
           description: Timestamp of an order in RFC3339 format
@@ -91,6 +86,21 @@ components:
           type: string
           description: Comment to an order
           example: "Some comment"
+      
+    ProductItem:
+      type: object
+      required:
+        - id
+        - quantity
+      properties:
+        id: 
+          type: string
+          description: Id of a product
+          example: "3a550dd9-c7d4-4c77-a73a-fcd13ce76712"
+        quantity: 
+          type: integer
+          description: Quantity of a product
+          example: 1
 
     CreateOrderResponse:
       type: object
