# internal/types/order.go
@@ -4,7 +4,11 @@ import "time"
 
 type Order struct {
 	Comment   string
+	Timestamp time.Time
+	Products  []ProductItem
+}
+
+type ProductItem struct {
 	ProductId string
 	Quantity  int
-	Timestamp time.Time
 }
